--- a/gateway-api/src/main/resources/application.properties
+++ b/gateway-api/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+# Enabling H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
+spring.datasource.url=jdbc:h2:file:~/users;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+server.port=8080
+
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+#spring.datasource.url = jdbc:mysql://localhost:3306/challenge_app?useSSL=false&createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
+#spring.datasource.username = root
+#spring.datasource.password = admin
+
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto = update
