--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
         environment:
             - MONGO_DATA_DIR=/data/db
             - MONGO_LOG_DIR=/dev/null
+            - SESSION_SECRET=NodeAppApi
             - MONGO_URL=mongodb://mongodb:27017/users
         volumes:
             - ./data/db:/data/db
