--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
             - 8080:8080
         depends_on:
             - app
+        links:
+            - app
     app:
         build: ./app
         container_name: "app-node"
@@ -15,14 +17,16 @@ services:
             - mongodb
         ports:
             - 3001:3001
-    mongodb:
+        links:
+            - db
+    db:
         image: mongo:latest
-        container_name: "mongodb"
+        container_name: "db"
         environment:
             - MONGO_DATA_DIR=/data/db
             - MONGO_LOG_DIR=/dev/null
             - SESSION_SECRET=NodeAppApi
-            - MONGO_URL=mongodb://mongodb:27017/users
+            - MONGO_URL=mongodb://db:27017/users
         volumes:
             - ./data/db:/data/db
         ports:
