--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.4",
     "mongoose": "^5.3.6",
     "mongoose-paginate": "^5.0.3",
+    "redis": "^2.8.0",
     "require-dir": "^1.1.0"
   }
 }
